// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownListElement /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  box-shadow: 0 0 10px 1px rgba(154,161,171,.15);
  font-family: inherit;
  height: inherit;
  overflow: auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: inherit;
  -webkit-overflow-scrolling: touch;
  background: #fff;
  color: #323a46;
  fill: #323a46;
}

.c0 > div {
  word-break: break-word;
  word-wrap: break-word;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownListElement /> should render component filled 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  box-shadow: 0 0 10px 1px rgba(154,161,171,.15);
  font-family: inherit;
  height: inherit;
  overflow: auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: inherit;
  -webkit-overflow-scrolling: touch;
  background: #0665d0;
  color: #fff;
  fill: #fff;
}

.c0 > div {
  word-break: break-word;
  word-wrap: break-word;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownListElement /> should render component filled with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  box-shadow: 0 0 10px 1px rgba(154,161,171,.15);
  font-family: inherit;
  height: inherit;
  overflow: auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: inherit;
  -webkit-overflow-scrolling: touch;
  background: #cde0f5;
  color: #033c7c;
  fill: #033c7c;
}

.c0 > div {
  word-break: break-word;
  word-wrap: break-word;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownListElement /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  box-shadow: 0 0 10px 1px rgba(154,161,171,.15);
  font-family: inherit;
  height: inherit;
  overflow: auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: inherit;
  -webkit-overflow-scrolling: touch;
  background: #fff;
  color: #323a46;
  fill: #323a46;
}

.c0 > div {
  word-break: break-word;
  word-wrap: break-word;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownListElement /> should resize component responsively 1`] = `
<DocumentFragment>
  .c0 {
  padding: .15625rem 0;
}

.c0 > div {
  font-size: .875rem;
  margin: .06rem .28rem;
  padding: .15625rem .15625rem;
}

.c1 {
  border-radius: .2rem;
  box-shadow: 0 0 10px 1px rgba(154,161,171,.15);
  font-family: inherit;
  height: inherit;
  overflow: auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: inherit;
  -webkit-overflow-scrolling: touch;
  background: #fff;
  color: #323a46;
  fill: #323a46;
}

.c1 > div {
  word-break: break-word;
  word-wrap: break-word;
}

@media (min-width:768px) {
  .c0 {
    padding: .3125rem 0;
  }

  .c0 > div {
    font-size: .875rem;
    margin: .125rem .45rem;
    padding: .3125rem .3125rem;
  }
}

@media (min-width:992px) {
  .c0 {
    padding: .625rem 0;
  }

  .c0 > div {
    font-size: 1rem;
    margin: .175rem .5rem;
    padding: .625rem .625rem;
  }
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;
